--- a/ICF.Web/index.html
+++ b/ICF.Web/index.html
@@ -101,11 +101,12 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angularjs-toaster/1.1.0/toaster.min.js"></script>
     <script src="scripts/infinite-scroll.js"></script>
     <script src="scripts/app.js"></script>
-
+    <script src="directives/fileModel.js"></script>
     <script src="Services/Post.js"></script>
     <script src="Services/User.js"></script>
     <script src="Controllers/MainController.js"></script>
     <script src="Controllers/GetPostController.js"></script>
+    <script src="Controllers/UploadFileController.js"></script>
     <script src="Controllers/HomeController.js"></script>
     <script src="Controllers/UserController.js"></script>
     <script src="Controllers/PostController.js"></script>
